# WuppieFuzz

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.THIRDPARTY  README.md  SBOM.txt  THIRD_PARTY_NOTICES  authentication.md  build.rs  dist-workspace.toml  prepare_release.sh  publiccode.yml  sigrid.yaml
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/cleanup/: SKILL.md
.github/workflows/: fuzz_target_single_runner  generate-sbom.yml  integration_test.yml  release.yml  rust.yml  sigrid-publish.yml  sigrid-pullrequest.yml  zizmor.yml
ansible/: install.yml  inventory.yml  unattended-upgrades.yaml  usage.md
ansible/github-runner-ansible/: site.yml
ansible/github-runner-ansible/roles/github_runner/defaults/: main.yml
ansible/github-runner-ansible/roles/github_runner/tasks/: install.yml  main.yml  remove.yml  user.yml
assets/: WuppieFuzz-action.jfif
coverage_agents/: README.md
coverage_agents/dotnet/: Program.cs  WuppieFuzz.DotnetCoverageAgent.csproj
example_configs/: java.yaml  python.yaml
src/: configuration.rs  debug_writer.rs  executor.rs  fuzzer.rs  header.rs  main.rs  monitors.rs  parameter_access.rs  parameter_feedback.rs  reproducer.rs  state.rs  types.rs  wuppie_version.rs
src/authentication/: basic.rs  bearer.rs  cookie.rs  custom.rs  mod.rs  oauth.rs  raw.rs  verify_auth.rs  wfc.rs
src/coverage_clients/: coverband.rs  dotnet.rs  dummy.rs  endpoint.rs  jacoco.rs  lcov_client.rs  mod.rs  read_utilities.rs
src/crash_dedup/: identity.rs  minimizer.rs  mod.rs  replay.rs
src/initial_corpus/: crash_minimization.rs  minimizer.rs  minimizer_nop.rs  mod.rs
src/initial_corpus/dependency_graph/: graphml.rs  mod.rs  normalize.rs  parameter_access.rs  toposort.rs
src/input/: method.rs  mod.rs  parameter.rs  serde_helpers.rs  utils.rs
src/openapi/: build_request.rs  curl_request.rs  examples.rs  mod.rs  validate_response.rs
src/openapi/spec/: load.rs  mod.rs
src/openapi_mutator/: add_request.rs  break_link.rs  different_method.rs  different_path.rs  duplicate_request.rs  establish_link.rs  mod.rs  remove_request.rs  splice_requests.rs  string_interesting.rs  swap_requests.rs  test_helpers.rs
src/reporting/: mod.rs  sqlite.rs
tutorial/: CORPUS.md  README.md  config.yaml  generate_corpus.yaml  header.yaml  login.yaml  openapi.json
tutorial/01_blackbox/: README.md  openapi.json
tutorial/02_whitebox/: README.md
wix/: main.wxs
