[package]
name = "wuppiefuzz"
version = "1.1.1"
authors = [
    "TNO Software and System Security"
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/TNO-S3/WuppieFuzz"
build = "build.rs"
description = "A coverage-guided REST API fuzzer developed on top of LibAFL"

[package.metadata.wix]
upgrade-guid = "A7114AC3-CB9E-48AC-90D9-766CE09CF336"
path-guid = "5DF1AA51-6503-49B6-9561-010755C05AD8"
license = false
eula = false

[features]
default = ["std"]
std = []

[profile.dev]
panic = "unwind"
opt-level = 0
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
cargo-license = "0.6.1"

[dependencies]
ahash = "0.8"
anyhow = "1.0.95"
base64 = "0.22.0"
build_html = "2.4.0"
byteorder = "1.5.0"
cesu8 = "1.1.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo", "derive", "env"] }
cookie = "0.18.1"
cookie_store = "0.21.1"
ctrlc = "3.4.4"
env_logger = "0.11.6"
indexmap = { version = "2.2.6", features = ["serde"] }
indicatif = "0.17.8"
iter-read = "1.0.1"
json_env_logger2 = "0.2.1"
lazy_static = "1.4.0"
lcov = "0.8"
libafl = "=0.13.2"
libafl_bolts = "0.13.2"
log = { version = "0.4.21", features = ["serde"] }
num = { version = "0.4.2", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.19.0"
openapiv3-extended = { version = "6.0.0", features = ["v2"] }
openssl = { version = "0.10", features = ["vendored"] }
petgraph = "0.7.1"
porter-stemmer = "0.1.2"
rand = "0.8.5"
rand_regex = "0.17.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
reqwest_cookie_store = "0.8.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustc-demangle = "=0.1.24"
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
tempfile = "3.15.0"
unicode-truncate = "2.0.0"
url = "2.5.0"
urlencoding = "2.1.3"
walkdir = "2.5.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
