[package]
name = "wuppiefuzz"
version = "1.4.1"
authors = [
    "TNO Software and System Security"
]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/TNO-S3/WuppieFuzz"
build = "build.rs"
description = "A coverage-guided REST API fuzzer developed on top of LibAFL"

[package.metadata.wix]
upgrade-guid = "A7114AC3-CB9E-48AC-90D9-766CE09CF336"
path-guid = "5DF1AA51-6503-49B6-9561-010755C05AD8"
license = false
eula = false

[features]
default = ["std"]
std = []

[profile.dev]
panic = "unwind"
opt-level = 0
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
cargo-license = "0.7.0"

[dependencies]
ahash = "0.8"
anyhow = "1.0.100"
base64 = "0.22.1"
build_html = "2.7.0"
byteorder = "1.5.0"
cesu8 = "1.1.0"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["cargo", "derive", "env"] }
ctrlc = "3.5.1"
env_logger = "0.11.8"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = "0.18.3"
iter-read = "1.1.0"
itertools = "0.14.0"
json_env_logger2 = "0.2.1"
lazy_static = "1.5.0"
lcov = "0.8"
libafl = { version = "0.15.4", features = ["clap", "cmin"] }
libafl_bolts = { version = "0.15.4", features = ["prelude"] }
log = { version = "0.4.29", features = ["serde"] }
num = { version = "0.4.3", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.21.3"
openapiv3-extended = { version = "6.0.1", features = ["v2"] }
openssl = { version = "0.10", features = ["vendored"] }
petgraph = "0.8.3"
porter-stemmer = "0.1.2"
rand = "0.9.2"
rand_regex = "0.18.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "cookies", "form", "json"] }
reqwest_cookie_store = "0.10.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
tempfile = "3.24.0"
strum = { version = "0.27.2", features = ["derive"] }
unicode-truncate = "2.0.0"
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
z3 = { version = "0.19.7", features = ["bundled"] }
oas3 = { version = "0.20.1", features = ["yaml-spec"] }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"

[workspace.metadata.dist.github-action-commits]
"actions/checkout" = "de0fac2e4500dabe0009e67214ff5f5447ce83dd"
"actions/upload-artifact" = "b7c566a772e6b6bfb58ed0dc250532a479d7789f"
"actions/download-artifact" = "37930b1c2abaa49bbe596cd826c3c89aef350131"
